[package]
edition = "2021"
name = "osmosis-swap-test"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-schema = "1.3"
cosmwasm-std = "1.3"
cw-storage-plus = "1.1.0"
cw-utils = "1"
osmosis-std = "0.16.2"
